@@ -2,58 +2,48 @@ package com.steve.saasapp.security;
 
 import com.steve.saasapp.model.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
     private final User user;
 
     public CustomUserDetails(User user) {
-
         this.user = user;
     }
 
     public User getUser() {
-
         return user;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Return roles if needed; for now, return empty list
-        return Collections.emptyList();
+        // Spring Security expects "ROLE_" prefix for hasRole() checks
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
 
-    @Override
-    public String getPassword() {
+    @Override public String getPassword() {
+
         return user.getPassword();
     }
-
-    @Override
-    public String getUsername() {
-        return user.getEmail();  // since email is your identifier
+    @Override public String getUsername() {
+        return user.getEmail();
     }
-
-    @Override
-    public boolean isAccountNonExpired() {
+    @Override public boolean isAccountNonExpired() {
         return true;
     }
-
-    @Override
-    public boolean isAccountNonLocked() {
+    @Override public boolean isAccountNonLocked() {
         return true;
     }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
+    @Override public boolean isCredentialsNonExpired() {
         return true;
     }
-
-    @Override
-    public boolean isEnabled() {
+    @Override public boolean isEnabled() {
         return true;
     }
 }
